--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -80,8 +80,6 @@ header {
     gap: 5px;
     padding-left: 5px;
     justify-content: center;
-
-
 }
 
 .menu a:hover {
@@ -100,7 +98,7 @@ li {
     font-weight: 300;
 }
 
-/* =========== DIV GRADIENTO =========== */
+/* =========== DIV GRADIENTE =========== */
 #divgradientHome {
     width: 100%;
     height: 50px;
@@ -116,7 +114,7 @@ li {
     justify-content: center;
 }
 
-.container-totulo {
+.container-titulo {
     display: flex;
     align-items: center;
     width: 100%;
@@ -133,7 +131,7 @@ li {
 
 
 .titulo {
-    font-size: 66px;
+    font-size: 6.6rem;
     color: #454545;
 }
 
@@ -144,14 +142,8 @@ li {
     align-items: center;
     color: #454545;
     padding-bottom: 20px;
-}
-
-.container-paragrafo p {
-    font-size: 18px;
+    font-size: .8rem;
     line-height: 20px;
-    color: black;
-
-
 }
 
 /* FORMULÁRIO DE SUPORTE */
@@ -184,6 +176,10 @@ li {
     transition: 3ms;
 }
 
+.input-suporte::placeholder {
+    font-weight: 100px;
+}
+
 .input-suporte:focus {
     border: 0.75px solid #F7941D;
     border-bottom: 2px solid #F7941D;
@@ -200,6 +196,7 @@ select {
     padding-left: 10px;
     font-size: 2rem;
     outline: none;
+    color: #005185;
 
 }
 
@@ -292,6 +289,7 @@ select option {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
 #ccontainer-inventario {
@@ -323,4 +321,244 @@ select option {
     width: 120px;
     height: 120px;
     margin-left: 20px;
+}
+
+
+
+
+@media (max-width: 1440px) {
+    body {
+        width: 1440px;
+    }
+
+    main {
+        padding-inline: 220px;
+    }
+}
+
+
+/* Tablet */
+@media (max-width: 1024px) {
+    body {
+        width: 1024px;
+    }
+
+    main {
+        padding-inline: 100px;
+    }
+
+    header {
+        height: 80px;
+    }
+
+    .logo {
+        width: 150px;
+    }
+
+    .logo img {
+        height: 60px;
+    }
+
+    .menu ul {
+
+        font-size: 1.8rem;
+        gap: 10px;
+    }
+
+    .menu a {
+        width: 150px;
+        height: 50px;
+        border-radius: 10px;
+        gap: 1px;
+        padding-left: 5px;
+        justify-content: center;
+    }
+
+    .titulo {
+        font-size: 4.4rem;
+        color: #454545;
+    }
+
+}
+
+
+/* Smartphones grandes */
+@media (max-width: 767px) {
+    body {
+        width: 767px;
+    }
+
+    main {
+        padding-inline: 30px;
+    }
+
+    header {
+        height: 80px;
+    }
+
+    .logo {
+        width: 120px;
+    }
+
+    .menu ul {
+        font-size: 1.6rem;
+        gap: 5px;
+    }
+
+    .container-menu {
+        padding-left: 30px;
+    }
+
+    .menu a {
+        width: 130px;
+    }
+
+    .titulo {
+        font-size: 3.3rem;
+        color: #454545;
+    }
+
+    .container-titulo {
+        padding-bottom: 15px;
+    }
+
+    .container-paragrafo {
+        font-size: 1.6rem;
+        height: 40px;
+    }
+
+    .label-suporte {
+        font-size: 1.8rem;
+    }
+
+    .input-suporte::placeholder {
+        font-size: 1.4rem;
+    }
+
+    select {
+        font-size: 1.8rem;
+        color: #005185;
+    }
+
+}
+
+/* Smartphones pequenos */
+@media (max-width: 428px) {
+    body {
+        width: 428px;
+        font-size: 1.2rem;
+    }
+
+    header{
+        display: non;
+        flex: 1;
+        background-color: yellow;
+        width: 100%;
+        height: 100%;
+    }
+    .container-header {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+    }
+    .menu ul{
+        align-items: center;
+        height: 100%;
+        flex-direction: column;
+    }
+
+
+    .container-paragrafo {
+        font-size: 1.2rem;
+        height: 40px;
+    }
+
+    .label-suporte {
+        font-size: 1.4rem;
+    }
+
+    .input-suporte::placeholder {
+        font-size: 1rem;
+    }
+
+    select {
+        font-size: 1.4rem;
+        color: #005185;
+    }
+
+    #img-pc {
+        display: flex;
+    }
+
+
+    #img-pc svg {
+        width: 100px;
+        height: 118px;
+        display: flex;
+        justify-content: c;
+    }
+
+
+    /* ================= menu hamburguer =================  */
+
+    #checkbox {
+        display: none;
+        position: fixed;
+        top: 0px;
+        right: 0px;
+    }
+
+    .toggle {
+        position: relative;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        transition-duration: .3s;
+    }
+
+    .bars {
+        width: 100%;
+        height: 4px;
+        background-color: rgb(253, 255, 243);
+        border-radius: 5px;
+        transition-duration: .3s;
+    }
+
+    /* #checkbox:checked + .toggle .bars {
+    margin-left: 13px;
+  } */
+
+    #checkbox:checked+.toggle #bar2 {
+        transform: translateY(14px) rotate(60deg);
+        margin-left: 0;
+        transform-origin: right;
+        transition-duration: .3s;
+        z-index: 2;
+    }
+
+    #checkbox:checked+.toggle #bar1 {
+        transform: translateY(28px) rotate(-60deg);
+        transition-duration: .3s;
+        transform-origin: left;
+        z-index: 1;
+    }
+
+    #checkbox:checked+.toggle {
+        transform: rotate(-90deg);
+    }
+
+    #checkbox:checked~ body {
+        display: block;
+        background-color: #004A8D;
+    }
+
+
+
+
 }
