--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -449,20 +449,15 @@ select option {
         font-size: 1.2rem;
     }
 
-    header{
-        display: non;
-        flex: 1;
-        background-color: yellow;
-        width: 100%;
-        height: 100%;
-    }
+
     .container-header {
         display: none;
         flex-direction: column;
         width: 100%;
         height: 100%;
     }
-    .menu ul{
+
+    .menu ul {
         align-items: center;
         height: 100%;
         flex-direction: column;
@@ -551,14 +546,26 @@ select option {
 
     #checkbox:checked+.toggle {
         transform: rotate(-90deg);
+        z-index: 2;
     }
 
-    #checkbox:checked~ body {
+    #checkbox:checked~.container-header {
         display: block;
-        background-color: #004A8D;
+
+
     }
+    #checkbox:checked ~ .container-header .container-menu {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
+    }
+    #checkbox:checked ~ .container-header .container-menu .menu a {
+        width: 100%;
 
-
+    }
 
 
 }
