--- a/painelR.css
+++ b/painelR.css
@@ -426,10 +426,10 @@ button {
     color: #454545;
     font-weight: bold;
 }
+
 .swal-check {
     font-size: 13px;
     color: #454545;
-
 }
 
 .swal-aviso {
@@ -437,7 +437,6 @@ button {
     font-weight: 600;
     color: #454545;
     margin-top: 10px;
-
 }
 
 /* Estiliza o fundo do alerta */
@@ -445,8 +444,9 @@ button {
     color: #cccccc;
     border-radius: 10px;
     width: 450px;
-    height: 250px;
+    height: auto; /* Ajuste para altura automática */
     border: 5px solid #004A8D;
+    padding: 20px;
 }
 
 /* Estiliza o texto do alerta */
@@ -489,4 +489,31 @@ button {
 /* Estiliza o botão de fechar */
 .swal-close {
     color: white;
+}
+
+/* Estiliza os inputs de rádio */
+.swal-radio-group {
+    margin: 10px 0;
+}
+
+.swal-radio-group label {
+    display: block;
+    margin: 5px 0;
+    font-size: 14px;
+    color: #454545;
+}
+
+/* Estiliza a caixa de texto */
+#swal-textarea-container {
+    margin-top: 10px;
+}
+
+#swal-textarea {
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    resize: none; /* Impede o redimensionamento */
 }
