melhoria na interface e adição da coleção historico para armazenar reservas finalizadas/canceladas

--- a/historico.css
+++ b/historico.css
@@ -37,26 +37,31 @@ header {
 }
 
 table {
+    width: 100%;
     margin-top: 20px;
     border: 1px solid rgb(168, 168, 168);
-
-    border-radius: 5px;
+    border-radius: 15px;
+    border-collapse: collapse;
 }
 
 th {
     height: 10px;
+    padding: 15px;
+    text-align: left;
 }
 
 
 td {
-    width: 100px;
-    text-align: center;
     height: 10px;
+    padding: 15px 15px 15px 15px;
+    text-align: left;
+    border-bottom: 2px solid #7c7d7e;
+    /* Linha azul separando o cabeçalho */
 }
 
 .btn-details {
     width: 80px;
-    height: 40px;
+    height: 28px;
     border-radius: 8px;
     background-color: #004A8D;
     border: none;
@@ -88,7 +93,6 @@ td {
     font-size: 40px;
     height: 100px;
     width: 550px;
-    border: 1px solid red;
     color: #454545;
     font-weight: 700;
     letter-spacing: 1px;
@@ -235,51 +239,40 @@ figure {
 }
 
 
-table { 
-    width: 100%;
-    border-collapse: collapse;
-    
-  }
-  
-  /* Estilizando o cabeçalho */
-  thead .header {
+
+
+/* Estilizando o cabeçalho */
+thead .header {
     color: black;
-    border-bottom: 3px solid #004A8D; /* Linha azul separando o cabeçalho */
-  }
-  
-  th{
-    padding: 10px;
-    text-align: left;
-    
-
-
-  } 
-
-
-  td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 2px solid #7c7d7e; /* Linha azul separando o cabeçalho */
+    border-bottom: 3px solid #004A8D;
+    /* Linha azul separando o cabeçalho */
 }
 
-  
-  /* Centralizar a coluna "Detalhes" */
-  th:nth-child(5) td:nth-child(5) {
+
+
+
+
+
+
+/* Centralizar a coluna "Detalhes" */
+th:nth-child(5) td:nth-child(5) {
     text-align: right;
-  }
-  
- 
-  
-  /* Linhas alternadas */
-  tbody tr:nth-child(odd) {
-    background-color: #ffffff; /* Branco */
-  }
-  
-  tbody tr:nth-child(even) {
-    background-color: #e4e4e4; /* Cinza mais claro */
-  }
-  
-  
+}
+
+
+
+/* Linhas alternadas */
+tbody tr:nth-child(odd) {
+    background-color: #ffffff;
+    /* Branco */
+}
+
+tbody tr:nth-child(even) {
+    background-color: #e4e4e4;
+    /* Cinza mais claro */
+}
+
+
 
 #Footerhistory {
     width: 100%;
@@ -321,9 +314,9 @@ table {
 }
 
 .line {
-  background-color: rgb(88, 88, 88);
-   height: 1px;
-   width: 221px;
-   margin-left: 850px;
+    background-color: rgb(88, 88, 88);
+    height: 1px;
+    width: 221px;
+    margin-left: 850px;
 
 }
