--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -142,7 +142,7 @@ li {
     align-items: center;
     color: #454545;
     padding-bottom: 20px;
-    font-size: .8rem;
+    font-size: 1.8rem;
     line-height: 20px;
 }
 
@@ -280,7 +280,6 @@ select option {
     width: 178px;
     height: 118px;
     display: flex;
-    justify-content: c;
 }
 
 
@@ -302,7 +301,7 @@ select option {
 /* =========== FOOTER =========== */
 #rodape {
     width: 100%;
-    background-color: #005185;
+    background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
     height: 120px;
     margin-top: 100px;
     display: flex;
@@ -312,19 +311,20 @@ select option {
 }
 
 #rodape h2 {
-    font-size: 2.4rem;
+    font-size: 2rem;
     color: #ffffff;
-    margin-right: 20px;
+    padding-right: 50px;
 }
 
-#logorodapeHome {
-    width: 120px;
-    height: 120px;
-    margin-left: 20px;
+footer .logo {
+    width: 200px;
 }
 
+#checkbox {
+    display: none;
+}
 
-
+/*================ INÍCIO RESPOSNIVIDADE /*================*/
 
 @media (max-width: 1440px) {
     body {
@@ -442,6 +442,7 @@ select option {
 
 }
 
+
 /* Smartphones pequenos */
 @media (max-width: 428px) {
     body {
@@ -481,17 +482,30 @@ select option {
         font-size: 1.4rem;
         color: #005185;
     }
+    .container-icone{
+        height: 70px;
+    }
+    .container-icone svg{
+        width: 100%;
+        height: 100%;
+    }
+    #container-1 {
+        justify-content: start;
+    }
 
     #img-pc {
         display: flex;
+        width: 35%;
+    }
+
+    #label-suporte-img-pc {
+        margin-top: 0px;
     }
 
 
     #img-pc svg {
-        width: 100px;
-        height: 118px;
-        display: flex;
-        justify-content: c;
+        width: 100%;
+        height: 100%;
     }
 
 
@@ -500,8 +514,6 @@ select option {
     #checkbox {
         display: none;
         position: fixed;
-        top: 0px;
-        right: 0px;
     }
 
     .toggle {
@@ -515,6 +527,7 @@ select option {
         justify-content: center;
         gap: 10px;
         transition-duration: .3s;
+        margin-left: 30px;
     }
 
     .bars {
@@ -524,6 +537,10 @@ select option {
         border-radius: 5px;
         transition-duration: .3s;
     }
+
+
+
+
 
     /* #checkbox:checked + .toggle .bars {
     margin-left: 13px;
@@ -551,21 +568,54 @@ select option {
 
     #checkbox:checked~.container-header {
         display: block;
-
-
     }
-    #checkbox:checked ~ .container-header .container-menu {
-        width: 100%;
+
+    #checkbox:checked~.container-header .container-menu {
         height: 100%;
         position: fixed;
         top: 0px;
         left: 0px;
+        padding-right: 30px;
+        align-items: center;
+        justify-content: center;
         background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
     }
-    #checkbox:checked ~ .container-header .container-menu .menu a {
-        width: 100%;
+
+    #checkbox:checked~.container-header .container-menu .menu a {
+        justify-content: start;
+        width: 100vw;
+        height: 80px;
+        font-size: 2rem;
+    }
+
+    #checkbox:checked~.container-header .container-menu .menu a svg {
+        width: 60px;
+        height: 60px;
+        margin-left: 30%;
 
     }
+
+    #checkbox:checked~.container-header .container-menu .menu a #svg-laptop {
+        width: 70px;
+    }
+
+    #checkbox:checked~.container-header .container-menu .menu ul {
+        height: 100%;
+
+    }
+
+    #checkbox:checked~.container-header .container-menu .menu ul li {
+        height: 100%;
+        width: 100%;
+        padding-left: 10px;
+    }
+
+    #rodape h2 {
+        font-size: 1.2rem;
+
+    }
+
+
 
 
 }
