--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -336,7 +336,6 @@ footer .logo {
     }
 }
 
-
 /* Tablet */
 @media (max-width: 1024px) {
     body {
@@ -380,7 +379,6 @@ footer .logo {
     }
 
 }
-
 
 /* Smartphones grandes */
 @media (max-width: 767px) {
@@ -450,7 +448,6 @@ footer .logo {
         font-size: 1.2rem;
     }
 
-
     .container-header {
         display: none;
         flex-direction: column;
@@ -462,50 +459,6 @@ footer .logo {
         align-items: center;
         height: 100%;
         flex-direction: column;
-    }
-
-
-    .container-paragrafo {
-        font-size: 1.2rem;
-        height: 40px;
-    }
-
-    .label-suporte {
-        font-size: 1.4rem;
-    }
-
-    .input-suporte::placeholder {
-        font-size: 1rem;
-    }
-
-    select {
-        font-size: 1.4rem;
-        color: #005185;
-    }
-    .container-icone{
-        height: 70px;
-    }
-    .container-icone svg{
-        width: 100%;
-        height: 100%;
-    }
-    #container-1 {
-        justify-content: start;
-    }
-
-    #img-pc {
-        display: flex;
-        width: 35%;
-    }
-
-    #label-suporte-img-pc {
-        margin-top: 0px;
-    }
-
-
-    #img-pc svg {
-        width: 100%;
-        height: 100%;
     }
 
 
@@ -538,13 +491,6 @@ footer .logo {
         transition-duration: .3s;
     }
 
-
-
-
-
-    /* #checkbox:checked + .toggle .bars {
-    margin-left: 13px;
-  } */
 
     #checkbox:checked+.toggle #bar2 {
         transform: translateY(14px) rotate(60deg);
@@ -615,7 +561,52 @@ footer .logo {
 
     }
 
+    /* ================= FIM MENU HAMBURGUER =================  */
 
 
+    /* conteudo da pagina */
+
+    .container-paragrafo {
+        font-size: 1.2rem;
+        height: 40px;
+    }
+
+    .label-suporte {
+        font-size: 1.4rem;
+    }
+
+    .input-suporte::placeholder {
+        font-size: 1rem;
+    }
+
+    select {
+        font-size: 1.4rem;
+        color: #005185;
+    }
+    .container-icone{
+        height: 70px;
+    }
+    .container-icone svg{
+        width: 100%;
+        height: 100%;
+    }
+    #container-1 {
+        justify-content: start;
+    }
+
+    #img-pc {
+        display: flex;
+        width: 35%;
+    }
+
+    #label-suporte-img-pc {
+        margin-top: 0px;
+    }
+
+    #img-pc svg {
+        width: 100%;
+        height: 100%;
+    }
 
 }
+    
