--- a/historico.css
+++ b/historico.css
@@ -59,7 +59,8 @@ td {
     /* Linha azul separando o cabeçalho */
 }
 
-.btn-details {
+
+#btn-details {
     width: 80px;
     height: 28px;
     border-radius: 8px;
@@ -68,6 +69,11 @@ td {
     align-items: center;
     display: flex;
     justify-content: center;
+    cursor: pointer;
+}
+#btn-details:hover {
+    background-color: #188fff;
+    transition: 0.5s;
 }
 
 #h2header {
@@ -320,3 +326,12 @@ tbody tr:nth-child(even) {
     margin-left: 850px;
 
 }
+
+/* swal fire custom */
+
+
+.custom-swal-popup {
+    font-family: Arial, sans-serif;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  }
