--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -247,7 +247,7 @@ select option {
     display: flex;
 }
 
-#btn-enviar {
+.btn {
     width: 256px;
     height: 59px;
     border-style: none;
@@ -258,6 +258,15 @@ select option {
     margin-top: 20px;
     transition: 300ms;
     cursor: pointer;
+    transition: 300ms;
+}
+
+.btn:hover{
+    background-color: #F7941D;
+    transition: 300ms;
+}
+.btn:active{
+    transform: scale(0.95);
 }
 
 #btn-enviar:hover {
