--- a/styles/home.css
+++ b/styles/home.css
@@ -16,124 +16,9 @@ body {
 
 }
 
-.header {
-    height: 130px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
-    width: 100%;
-    
-
-}
-
-.headerleft{
-    width: 30%;
-}
-
-.imgheader{
-width: 150px;
-margin-left: 50px;
-
-
-}
-
-
-#h2header {
-    color: white;
-    text-align: center;
-    font-size: 2.4rem;
-    margin-left: 20px;
-    
-
-}
-
-.menu {
-    height: 100%;
-    width: 85%;
-    justify-content: flex-start;
-    align-items: end;
-    display: flex;
-    
-
-}
-
-
-.paginasmenu {
-    color: #F8F8F8;
-    list-style-type: none;
-    display: flex;
+#notebook-link{
+    display:flex;
     flex-direction: row;
-    width: 750px;
-    justify-content: space-around;
-    font-size: 5.5rem;
-    font-weight: bold;
-    align-items: center;
-    margin-bottom: 2px;
-}
-
-a {
-    text-decoration: none;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    color: #F8F8F8;
-    font-size: 25.5%;
-}
-
-li {
-    position: relative;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    font-size: 65.5%;
-
-    
-}
-
-ul :hover{
-    color: #F7941D;
-    transition: 0.4s;  
-
-}
-
-a :hover{
-    color: #F7941D;
-    transition: 0.4s;  
-    
-}
-
-.menu a:hover svg {
-    fill: #F7941D;
-    transition: 0.3s;
-}
-
-.suportePainel {
-    border: 1px solid #BCBCBC;
-    display: flex;
-    width: 700px;
-    height: 60px;
-    background-color: #F8F8F8;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    justify-content: space-between;
-
-
-
-}
-
-.menuleft {
-    text-decoration: none;
-
-    color: #004A8D;
-    font-size: 1.6rem;
-}
-
-.menuright {
-    text-decoration: none;
-    color: #004A8D;
-    font-size: 1.6rem;
-
 }
 
 #divgradientHome {
@@ -393,32 +278,7 @@ button {
 
 
 
-#rodape {
 
-    bottom: 0;
-    width: 100%;
-    background-color: #005185;
-    height: 120px;
-    margin-top: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-
-}
-
-#rodape h2 {
-    font-size: 2.4rem;
-    color: #ffffff;
-    margin-right: 20px;
-}
-
-#logorodapeHome {
-    width: 120px;
-    height: 120px;
-    margin-left: 20px;
-}
 
 .radio-inputs {
     display: flex;
