--- a/styles/painelR.css
+++ b/styles/painelR.css
@@ -5,7 +5,9 @@
 
 }
 
-body {
+body,
+html {
+    /* height: 100%; */
     background-color: #ffffff;
     justify-content: center;
     flex-direction: column;
@@ -15,11 +17,13 @@ body {
 
 
 
+
+
 #divgradientHome {
     width: 100%;
     height: 50px;
     background: linear-gradient(#005185, #ffffff);
-    
+
 }
 
 
@@ -35,19 +39,8 @@ body {
     font-weight: 700;
     letter-spacing: 1px;
 }
-/* .suportePainel {
-    border: 1px solid #BCBCBC;
-    display: flex;
-    width: 700px;
-    height: 60px;
-    background-color: #F8F8F8;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    justify-content: space-between;
 
 
-
-} */
 
 .info {
     display: flex;
@@ -78,25 +71,26 @@ body {
 }
 
 
-
+#centralizacao {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+}
 
 #container {
-    margin-top: 20px;
     width: 80%;
-    height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
     justify-items: center;
-    margin-bottom: 400px;
-    /* grid-template-rows: repeat(3, 1fr) */
-
 }
+
+
 
 .cardSeparator {
     display: flex;
     flex-direction: row;
-    height: auto;
+    height: 280px;
     color: #454545;
 }
 
@@ -333,7 +327,8 @@ button {
     color: #cccccc;
     border-radius: 10px;
     width: 450px;
-    height: auto; /* Ajuste para altura automática */
+    height: auto;
+    /* Ajuste para altura automática */
     border: 5px solid #004A8D;
     padding: 20px;
 }
@@ -404,5 +399,6 @@ button {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
-    resize: none; /* Impede o redimensionamento */
+    resize: none;
+    /* Impede o redimensionamento */
 }
