--- a/styles/home.css
+++ b/styles/home.css
@@ -393,29 +393,22 @@ button {
 
 
 /* swal custom */
-
-.custom-swal-container {
-    width: 450px;
-    height: 280px;
-    border: 5px solid #004A8D;
-}
-
 .custom-swal-title {
     font-size: 22px !important;
     padding: 0;
-    /* Aumenta o tamanho do título */
-    color: #454545 !important;
-    /* Cor do título */
+    margin: 15px;
 }
 
 .custom-swal-text {
     font-size: 14px !important;
-    padding: 0;
+
+
 }
 
-.icon-swal {
-    font-size: 13px !important;
-}
+.icon-swal{
+    font-size: 15px !important;
+  }
+
 
 .confirm-swal-button {
     font-size: 15px !important;
