--- a/styles/painelR.css
+++ b/styles/painelR.css
@@ -264,21 +264,14 @@ button {
 
 /* swal styles cancel*/
 
-.custom-swal-container {
-    width: 550px !important;
-    height: 350px !important;
-    border: 5px solid #004A8D;
-}
+
 
 .custom-swal-title {
     font-size: 22px !important;
-    /* Aumenta o tamanho do título */
-    color: #454545 !important;
-    /* Cor do título */
 }
 
 .custom-swal-text {
-    font-size: 18px !important;
+    font-size: 15px !important;
     padding: 0;
 }
 
@@ -292,17 +285,20 @@ button {
 
 .cancel-swal-button {
     font-size: 14px !important;
-
+    
 }
 
 .custom-swal-check strong {
-    border: 1px solid;
+    border: 5px solid;
 }
 
 
 /* swal styles finish*/
 
 
+.swal-popup{
+    width: 400px !important;
+}
 
 .swal-title {
     font-size: 22px;
@@ -322,20 +318,8 @@ button {
     margin-top: 10px;
 }
 
-/* Estiliza o fundo do alerta */
-.swal-popup {
-    color: #cccccc;
-    border-radius: 10px;
-    width: 450px;
-    height: auto;
-    /* Ajuste para altura automática */
-    border: 5px solid #004A8D;
-    padding: 20px;
-}
-
-/* Estiliza o texto do alerta */
 .swal-text {
-    font-size: 9px;
+    font-size: 12px;
     color: red;
     display: inline;
 }
@@ -344,8 +328,9 @@ button {
 .swal-link {
     color: red;
     font-weight: bold;
-    font-size: 9px;
+    font-size: 12px;
     display: inline;
+    text-decoration: underline;
 }
 
 .swal-link:hover {
@@ -357,7 +342,7 @@ button {
     background-color: #F7941D;
     color: white;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 14px !important;
     padding: 8px 16px;
 }
 
@@ -366,7 +351,7 @@ button {
     background-color: #004A8D;
     color: white;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 14px !important;
     padding: 8px 16px;
 }
 
@@ -400,5 +385,4 @@ button {
     border-radius: 5px;
     font-size: 14px;
     resize: none;
-    /* Impede o redimensionamento */
 }
