--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -205,19 +205,19 @@ li {
 .swal2-popup {
     font-family: "Roboto", sans-serif;
     background-size: cover;
-    background-color: #012342;
+    background-color: #ffffff;
     border-radius: 1em;
     padding: 2em;
   }
   
   .swal2-title {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 1.5em;
     margin-bottom: 1em;
   }
   
   .swal2-html-container {
-    color: #afafaf;
+    color: #020202;
     font-weight: 600;
     padding: 0.8em;
   }
@@ -229,24 +229,24 @@ li {
   
   
   .swal2-confirm {
-    background-color: #F7941D !important;
+    background-color: #005185 !important;
     border-radius: 0.5em;
     padding: 0.5em 1em;
     font-size: 0.9em;
   }
   
   .swal2-confirm:hover {
-    background-color: #f76d1d !important;
+    background-color: #319adb !important;
     transition: 0.2s;
   }
   .swal2-cancel {
-    background-color: #fd0000 !important;
+    background-color: #f76d1d !important;
     border-radius: 0.5em;
     padding: 0.5em 1em;
     font-size: 0.9em;
   }
   
   .swal2-cancel:hover {
-    background-color: #9e0000 !important;
+    background-color: #ff8742 !important;
     transition: 0.2s;
   }
