--- a/styles/painelR.css
+++ b/styles/painelR.css
@@ -83,6 +83,7 @@ html {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
+    gap: 20px
 }
 
 
@@ -300,6 +301,16 @@ button {
     width: 400px !important;
 }
 
+.swal-body{
+    background-color: #c2c2c2;
+    height: 180px !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+}
+
 .swal-title {
     font-size: 22px;
     color: #454545;
@@ -363,6 +374,10 @@ button {
 /* Estiliza os inputs de rádio */
 .swal-radio-group {
     margin: 10px 0;
+}
+
+.swal-html{
+    background-color: #AFAFAF;
 }
 
 .swal-radio-group label {
