--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -189,12 +189,12 @@ li {
 
 select {
     width: 100%;
-    height: 40px;
+    height: 4rem;
     background-color: #E7E7E7;
     border: 0.7px solid #004A8D;
     border-radius: 8px;
     padding-left: 10px;
-    font-size: 2rem;
+    font-size: 1.6rem;
     outline: none;
     color: #005185;
 
@@ -261,11 +261,12 @@ select option {
     transition: 300ms;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: #F7941D;
     transition: 300ms;
 }
-.btn:active{
+
+.btn:active {
     transform: scale(0.95);
 }
 
@@ -442,16 +443,22 @@ footer .logo {
         font-size: 1.4rem;
     }
 
+
     select {
-        font-size: 1.8rem;
+        font-size: 1.4rem;
         color: #005185;
     }
+
+    body>main>div.container-titulo>div.container-icone {
+        width: 75px;
+    }
+
 
 }
 
 
 /* Smartphones pequenos */
-@media (max-width: 428px) {
+@media screen and (min-width: 300px) and (max-width: 420px) {
     body {
         width: 428px;
         font-size: 1.2rem;
@@ -582,6 +589,7 @@ footer .logo {
 
     .label-suporte {
         font-size: 1.4rem;
+        padding-top: 15px;
     }
 
     .input-suporte::placeholder {
@@ -592,13 +600,16 @@ footer .logo {
         font-size: 1.4rem;
         color: #005185;
     }
-    .container-icone{
+
+    .container-icone {
         height: 70px;
     }
-    .container-icone svg{
+
+    .container-icone svg {
         width: 100%;
         height: 100%;
     }
+
     #container-1 {
         justify-content: start;
     }
@@ -616,6 +627,8 @@ footer .logo {
         width: 100%;
         height: 100%;
     }
-
-}
+    .label-suporte{
+        margin-top: 2px;
+    }
     
+}
